testsuite/tests/typecheck/should_fail/T12785b.stderr

T12785b.hs:29:76: error:
    • Couldn't match type ‘stru0’ with ‘s1’
      Expected: STree n (STree ('S n) (STree ('S m) f)) stru0
        Actual: STree n1 (STree ('S n1) (STree ('S ('S n1)) f)) s1
        because type variable ‘s1’ would escape its scope
      This (rigid, skolem) type variable is bound by
        a pattern with constructor:
          Hide :: forall {a} (n :: Peano) (f :: a -> *) (s :: HTree n a).
                  STree n f s -> Hidden n f,
        in an equation for ‘nest’
        at T12785b.hs:29:44-50
    • In the second argument of ‘SBranchX’, namely ‘tr’
      In the second argument of ‘($)’, namely ‘a `SBranchX` tr’
      In the expression: Hide $ a `SBranchX` tr
    • Relevant bindings include
        tr :: STree n1 (STree ('S n1) (STree ('S ('S n1)) f)) s1
          (bound at T12785b.hs:29:49)
        a :: STree ('S m1) f s (bound at T12785b.hs:29:12)
        nest :: HTree m1 (Hidden ('S m1) f) -> Hidden m1 (STree ('S m1) f)
          (bound at T12785b.hs:27:1)
